crates/analyzer/tests/snapshots/errors__ctx_missing_load.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: incorrect type for argument to `Foo`
  ┌─ compile_errors/ctx_missing_load.fe:7:13
  │
7 │         Foo(0)
  │             ^ cannot cast type `u256` to type `Foo`


